--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "jest": "^27.4.4",
     "lint-staged": "^12.1.2",
     "node-mocks-http": "^1.11.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "supertest": "^6.1.6",
@@ -106,30 +106,38 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express-session": "^1.17.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.1",
+    "express-session": "^1.17.3",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
-    "mongoose": "^7.0.2",
+    "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "pm2": "^5.1.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
+    "two-step-auth": "^1.1.2",
     "validator": "^13.7.0",
     "winston": "^3.3.3",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "yarn": "^1.22.19"
   },
   "config": {
     "commitizen": {
